Changelog
=========


2.13.0 (unreleased)
-------------------

- Drop ftw.contentpage support. Make sure to not have ftw.contentpage installed when updating. [jone]


2.12.1 (2019-11-11)
-------------------

- Use plone.app.uuid to resolve uuids to support plone 5 [Nachtalb]
- Fix publishing of types with IShortName behaviour [Nachtalb]


2.12.0 (2019-10-18)
-------------------

- Replace "is_sl_contentish" function with "belongs_to_parent".
  This requires an update of `ftw.publisher.sender` to the compatible
  version. The new implementation is more generic. [jone]

- Replace the Simplelayout-specific "RemoveDeletedSLContentishChildren"
  adapter with a generic "RemoveChildren" adapter so that it also works
  for other kind of content, such as PloneFormGen. [jone]

- Improve ``ftw.trash`` integration regarding deleted content. [jone]



2.11.1 (2019-05-07)
-------------------

- Add support for ftw.trash with simplelayout [mathias.leimgruber]


2.11.0 (2019-03-29)
-------------------

- Add support for Plone 5.1. [Nachtalb, jone, mbaechtold]


2.10.2 (2018-02-06)
-------------------

- Handle broken relations properly. [jone, mbaechtold]

2.10.1 (2017-11-17)
-------------------

- Add utils function to make a relative path absolute. [raphael-s]


2.10.0 (2017-11-14)
-------------------

- Support datagrid GridRow serialization/deserialization of RelationValues [mathias.leimgruber]
- No longer install "splinter" extra from "ftw.testing". [mbaechtold]


2.9.2 (2017-06-12)
------------------

- Improve publishing the layout property on plone site
  root (introduced in 2.7.3). [mbaechtold]


2.9.1 (2017-02-28)
------------------

- Fix publishing objects having backward relations. [mbaechtold]


2.9.0 (2017-01-04)
------------------

- Add support for publishing the category ranks of categorizable
  content types from "ftw.shop". [mbaechtold]


2.8.2 (2016-11-16)
------------------

- Fix daylight savings issue in p.a.events' start / end. [jone]


2.8.1 (2016-11-14)