@@ -5,6 +5,7 @@ Changelog
 2.13.0 (unreleased)
 -------------------
 
+- Update to newest ftw.testing>2. [jone]
 - Drop ftw.contentpage support. Make sure to not have ftw.contentpage installed when updating. [jone]
 
 
